added docs for public classes